Second Commit. The hierarchy of the app is now complete

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#c3c2c2"
-            />
+            android:fillViewport="false"
+            style="@style/AppTheme" />
 
     </android.support.design.widget.AppBarLayout>
 
