--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,4 +5,19 @@
 
 
     </style>
+
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:textColorSecondaryInverse">@android:color/holo_purple</item>
+        <item name="android:colorBackground">@color/button_material_light</item>
+        <item name="android:textColorPrimary">@android:color/holo_red_light</item>
+        <item name="android:colorForeground">@android:color/holo_red_light</item>
+        <item name="android:textColorSecondary">@android:color/holo_red_light</item>
+        <item name="android:textColorPrimaryInverse">@android:color/holo_red_light</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/cardview_dark_background</item>
+        <item name="android:windowBackground">@color/button_material_light</item>
+        <item name="android:statusBarColor">@color/bright_foreground_inverse_material_dark</item>
+    </style>
 </resources>
