--- a/app/src/main/res/layout/activity_book_content.xml
+++ b/app/src/main/res/layout/activity_book_content.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,133 +8,46 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".BookActivity"
+    android:fillViewport="true"
     tools:showIn="@layout/activity_book">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ffffff"
-            android:orientation="vertical"
-            android:paddingLeft="15dp">
-            <TextView
-                android:id="@+id/primary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="How to draw a full superhero"
-                android:paddingTop="15dp"
-                android:textColor="#3c3c3c"/>
-            <TextView
-                android:id="@+id/secondary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Complete this tutorial and you will have the full skillset to draw your very own head"
-                android:paddingTop="5dp"
-                android:textColor="#c0b9b9"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:paddingLeft="0dp">
 
-            //vertical
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <!-- A Card -->
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view"
-                    android:layout_width="160dp"
-                    android:layout_height="wrap_content"
-                    card_view:cardCornerRadius="4dp"
-                    android:layout_margin="10dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="#ffffff">
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:src="@drawable/head1_thumb"/>
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="1dp"
-                        android:background="#bababa" />
-                    <TextView
-                        android:id="@+id/primary"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="How to draw a head"
-                        android:paddingLeft="7dp"
-                        android:paddingTop="2dp"
-                        android:textColor="#3c3c3c"/>
-                    <TextView
-                        android:id="@+id/secondary"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Let's start with the head"
-                        android:paddingLeft="7dp"
-                        android:paddingTop="0dp"
-                        android:paddingBottom="2dp"
-                        android:textColor="#c0b9b9"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <!-- A Card -->
-                <android.support.v7.widget.CardView
-                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view"
-                    android:layout_width="160dp"
-                    android:layout_height="wrap_content"
-                    card_view:cardCornerRadius="4dp"
-                    android:layout_margin="10dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:background="#ffffff">
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="160dp"
-                            android:src="@drawable/head1_thumb"/>
-                        <View
-                            android:layout_width="fill_parent"
-                            android:layout_height="1dp"
-                            android:background="#bababa" />
-                        <TextView
-                            android:id="@+id/primary"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="How to draw a head"
-                            android:paddingLeft="7dp"
-                            android:paddingTop="2dp"
-                            android:textColor="#3c3c3c"/>
-                        <TextView
-                            android:id="@+id/secondary"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Let's start with the head"
-                            android:paddingLeft="7dp"
-                            android:paddingTop="0dp"
-                            android:paddingBottom="2dp"
-                            android:textColor="#c0b9b9"/>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/primary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="How to draw a full superhero"
+            android:paddingTop="15dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="#3c3c3c" />
 
-            </LinearLayout>// vertical
+        <TextView
+            android:id="@+id/secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Complete this tutorial and you will have the full skillset to draw your very own head"
+            android:paddingTop="0dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:textColor="#c0b9b9" />
 
 
+        <com.draw.aidansliney.draw3.ExpandableGridView
+            android:numColumns="auto_fit"
+            android:gravity="center"
+            android:columnWidth="150dp"
+            android:stretchMode="columnWidth"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/grid" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Go to Page Slideshow"
-                android:id="@+id/textView1"
-                android:layout_marginLeft="59dp"
-                android:layout_marginStart="59dp"
-                android:layout_marginTop="84dp"
-                android:textColor="@color/colorPrimaryDark"
-                />
-        </LinearLayout>
-
-
-
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
