--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DRAW"
                 android:textSize="28dp"
                 android:textColor="#ffffff"
-                android:layout_gravity="center"
-                />
+                android:layout_gravity="center" />
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
