--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/layout_1"
+            android:id="@+id/layout_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
@@ -22,36 +22,77 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/head1_cover"
-                android:adjustViewBounds="true"
-                />
+                android:src="@drawable/head4_cover"
+                android:adjustViewBounds="true" />
 
             <TextView
                 android:id="@+id/primary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Browse it up"
+                android:text="Mint Man"
                 android:paddingLeft="15dp"
                 android:paddingTop="15dp"
-                android:textColor="#3c3c3c"/>
+                android:textColor="#3c3c3c" />
 
             <TextView
                 android:id="@+id/secondary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Helllllo"
+                android:text="Let's talk about the amazing mint man. The tutorial is for advanced users. We will focus on shading and coloring in this tutorial. Let's get going!"
                 android:paddingLeft="15dp"
                 android:paddingTop="5dp"
-                android:textColor="#3c3c3c"/>
+                android:textColor="#c0b9b9" />
         </LinearLayout>
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="#bababa"
-            android:layout_marginBottom="20dp"
-            />
+            android:layout_marginBottom="20dp" />
 
         <LinearLayout
+            android:id="@+id/layout_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="15dp"
+            android:orientation="vertical"
+            android:background="#ffffff">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/head3_cover"
+                android:adjustViewBounds="true" />
+
+            <TextView
+                android:id="@+id/primary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="The blue Superhero"
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
+                android:textColor="#3c3c3c" />
+
+            <TextView
+                android:id="@+id/secondary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Now is the time to learn how to draw the blue superhero. We will go into details on how do draw the perfect blue hero"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColor="#c0b9b9" />
+
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#bababa"
+            android:layout_marginBottom="20dp" />
+
+        <LinearLayout
+            android:id="@+id/layout_6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
@@ -62,74 +103,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/head1_cover"
-                android:adjustViewBounds="true"
-                />
+                android:adjustViewBounds="true" />
 
             <TextView
                 android:id="@+id/primary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Helllllo"
+                android:text="The male eye"
                 android:paddingLeft="15dp"
                 android:paddingTop="15dp"
-                android:textColor="#3c3c3c"/>
+                android:textColor="#3c3c3c" />
 
             <TextView
                 android:id="@+id/secondary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Helllllo"
-                android:paddingLeft="15dp"
-                android:paddingTop="5dp" />
+                android:text="Let's start with the head"
+                android:paddingLeft="7dp"
+                android:paddingTop="0dp"
+                android:paddingBottom="2dp"
+                android:textColor="#c0b9b9" />
         </LinearLayout>
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="#bababa"
-            android:layout_marginBottom="20dp"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="15dp"
-            android:orientation="vertical"
-            android:background="#ffffff">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/head1_cover"
-                android:adjustViewBounds="true"
-                />
-
-            <TextView
-                android:id="@+id/primary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Helllllo"
-                android:paddingLeft="15dp"
-                android:paddingTop="15dp"
-                android:textColor="#3c3c3c"/>
-
-            <TextView
-                android:id="@+id/secondary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Helllllo"
-                android:paddingLeft="15dp"
-                android:paddingTop="5dp" />
-        </LinearLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="#bababa"
-            android:layout_marginBottom="20dp"
-            />
+            android:layout_marginBottom="20dp" />
     </LinearLayout>
-
-
-
 
 
 </ScrollView>
