--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -1,3 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- BOOK 1 -->
+    <string name="book1">book1</string>
+    <drawable name="book1cover">@drawable/head1_cover</drawable>
+    <string name="book1heading1">How to draw a full superhero</string>
+    <string name="book1heading2">How to draw a full superhero</string>
+    <string-array name="book1cardtext1">
+        <item>Male Head</item>
+        <item>The Hair</item>
+        <item>The Arm</item>
+        <item>Fingers</item>
+        <item>Skin</item>
+        <item>Shading Skin</item>
+        <item>Feet</item>
+        <item>Legs</item>
+    </string-array>
+    <string-array name="book1cardtext2">
+        <item>Creating heads</item>
+        <item>All types of hair</item>
+        <item>Both arms</item>
+        <item>10 fingers</item>
+        <item>Male skin</item>
+        <item>Depth in skin</item>
+        <item>2 feet</item>
+        <item>2 legs and knees</item>
+    </string-array>
+    <integer-array name="book1cardimages">
+        <item>@drawable/head2_09</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_13</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_07</item>
+        <item>@drawable/head2_01</item>
+        <item>@drawable/head2_10</item>
+        <item>@drawable/head2_19</item>
+    </integer-array>
+    <string-array name="book1PageIds">
+        <item>book1Page1</item>
+        <item>book1Page2</item>
+        <item>book1Page3</item>
+        <item>book1Page4</item>
+        <item>book1Page5</item>
+        <item>book1Page6</item>
+        <item>book1Page7</item>
+        <item>book1Page8</item>
+    </string-array>
+
+    <integer-array name="book1Page1Slides">
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_18</item>
+        <item>@drawable/head2_17</item>
+        <item>@drawable/head2_16</item>
+        <item>@drawable/head2_15</item>
+        <item>@drawable/head2_14</item>
+        <item>@drawable/head2_13</item>
+        <item>@drawable/head2_12</item>
+    </integer-array>
+
+    <integer-array name="book1Page2Slides">
+        <item>@drawable/head2_12</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_13</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_07</item>
+        <item>@drawable/head2_01</item>
+        <item>@drawable/head2_10</item>
+        <item>@drawable/head2_19</item>
+    </integer-array>
+
+    <!-- BOOK 2 -->
+    <drawable name="book2cover">@drawable/head3_cover</drawable>
+    <string name="book2heading1">How to draw a full superhero</string>
+    <string name="book2heading2">How to draw a full superhero</string>
+    <string-array name="book2cardtext1">
+        <item>Creating heads</item>
+        <item>All types of hair</item>
+        <item>Both arms</item>
+        <item>10 fingers</item>
+        <item>Male skin</item>
+        <item>Depth in skin</item>
+        <item>2 feet</item>
+        <item>2 legs and knees</item>
+    </string-array>
+    <string-array name="book2cardtext2">
+        <item>Creating heads</item>
+        <item>All types of hair</item>
+        <item>Both arms</item>
+        <item>10 fingers</item>
+        <item>Male skin</item>
+        <item>Depth in skin</item>
+        <item>2 feet</item>
+        <item>2 legs and knees</item>
+    </string-array>
+    <integer-array name="book2cardimages">
+        <item>@drawable/head2_05</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_05</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+    </integer-array>
+
+    <!-- BOOK 3 -->
+    <drawable name="book3cover">@drawable/head4_cover</drawable>
+    <string name="book3heading1">How to draw a full superhero</string>
+    <string name="book3heading2">How to draw a full superhero</string>
+    <string-array name="book3cardtext1">
+        <item>Creating heads</item>
+        <item>All types of hair</item>
+        <item>Both arms</item>
+        <item>10 fingers</item>
+        <item>Male skin</item>
+        <item>Depth in skin</item>
+        <item>2 feet</item>
+        <item>2 legs and knees</item>
+    </string-array>
+    <string-array name="book3cardtext2">
+        <item>Creating heads</item>
+        <item>All types of hair</item>
+        <item>Both arms</item>
+        <item>10 fingers, nails and all</item>
+        <item>Male skin</item>
+        <item>Depth in skin</item>
+        <item>2 feet</item>
+        <item>2 legs</item>
+    </string-array>
+    <integer-array name="book3cardimages">
+        <item>@drawable/head2_05</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_05</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_19</item>
+    </integer-array>
+
+    <!--Slides-->
+
+    <integer-array name="book1Slides1">
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_01</item>
+        <item>@drawable/head2_02</item>
+        <item>@drawable/head2_03</item>
+        <item>@drawable/head2_04</item>
+        <item>@drawable/head2_05</item>
+        <item>@drawable/head2_06</item>
+        <item>@drawable/head2_07</item>
+        <item>@drawable/head2_08</item>
+        <item>@drawable/head2_09</item>
+        <item>@drawable/head2_10</item>
+        <item>@drawable/head2_11</item>
+        <item>@drawable/head2_12</item>
+        <item>@drawable/head2_13</item>
+        <item>@drawable/head2_14</item>
+        <item>@drawable/head2_15</item>
+        <item>@drawable/head2_16</item>
+        <item>@drawable/head2_17</item>
+        <item>@drawable/head2_18</item>
+        <item>@drawable/head2_19</item>
+    </integer-array>
+    <integer-array name="book1Slides2">
+        <item>@drawable/head2_19</item>
+        <item>@drawable/head2_01</item>
+        <item>@drawable/head2_02</item>
+        <item>@drawable/head2_03</item>
+        <item>@drawable/head2_04</item>
+        <item>@drawable/head2_05</item>
+        <item>@drawable/head2_06</item>
+        <item>@drawable/head2_07</item>
+        <item>@drawable/head2_08</item>
+        <item>@drawable/head2_09</item>
+        <item>@drawable/head2_10</item>
+        <item>@drawable/head2_11</item>
+        <item>@drawable/head2_12</item>
+        <item>@drawable/head2_13</item>
+        <item>@drawable/head2_14</item>
+        <item>@drawable/head2_15</item>
+        <item>@drawable/head2_16</item>
+        <item>@drawable/head2_17</item>
+        <item>@drawable/head2_18</item>
+        <item>@drawable/head2_19</item>
+    </integer-array>
 </resources>
