--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/layout_4"
+            android:id="@+id/layout_3b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
@@ -51,7 +51,7 @@
             android:layout_marginBottom="20dp" />
 
         <LinearLayout
-            android:id="@+id/layout_5"
+            android:id="@+id/layout_2b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
@@ -82,7 +82,6 @@
                 android:paddingRight="15dp"
                 android:textColor="#c0b9b9" />
 
-
         </LinearLayout>
 
         <View
@@ -92,7 +91,7 @@
             android:layout_marginBottom="20dp" />
 
         <LinearLayout
-            android:id="@+id/layout_6"
+            android:id="@+id/layout_1b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="15dp"
